# RFDGameStudio

./: .clinerules  .gitignore  README.md  __deploy_arcade_now.py  package-lock.json  pyproject.toml  requirements.txt  temp_verify_zip.ps1
docs/: RFDGameStudio_EngineExpansionMap.md  RFDGameStudio_GapAnalysis.md  slimegarden_recovery_manifest.md  slimeworld_lifecycle_report.md
scripts/: shark_survival_analysis.py  shoal_ecosystem_stress.py
studio/: __init__.py  executor.py  loader.py  runtime.py  validator.py
studio_mcp/: game_metadata.py  intake.py  server.py  session_store.py  tools.py  verify.py
temp_slimegarden35/: README.md  index.html  metadata.json
tests/: test_brewfield.py  test_chimera_wilds.py  test_dissonance_anchors.py  test_dissonance_run_state.py  test_executor.py  test_generic_renderer.py  test_intake.py  test_integration.py  test_loader.py  test_multi_return_detector.py  test_pygame_renderer.py  test_runtime.py  test_scrapcrawl.py  test_shared_lua_primitives.py  test_shoal.py  test_slimegarden_genetics.py  test_slimeworld.py  test_slimeworld_breeding_cost.py  test_slimeworld_color_codex.py  test_slimeworld_dispatch_resolution.py  test_slimeworld_exploration_resolution.py  test_slimeworld_file_split.py  test_slimeworld_mediation_resolution.py  test_slimeworld_petition_spawning.py  test_slimeworld_shape_codex.py  test_slimeworld_shape_naming.py  test_slimeworld_stats.py  test_slimeworld_stray_default_role.py  test_slimeworld_tier_economics.py  test_slimeworld_wanderer_petitions.py  test_slimeworld_worker_income_cycle.py  test_slither_rogue.py  (+7 more)
(+642 files in other folders)
