[project]
name = "rfdgamestudio"
version = "0.1.0"
description = "A game definition format and multi-runtime contract."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.12.*"

dependencies = [
    "lupa>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["studio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
