[project]
name = "rfdgamestudio"
version = "0.1.0"
description = "A game definition format and multi-runtime contract."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.12.*"

dependencies = [
    "lupa>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "mcp>=1.0.0,<2",
    "pygame_gui>=0.6.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["studio", "studio_mcp"]

[project.scripts]
studio-mcp = "studio_mcp.server:asgi_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
